--- a/exercise_2.ipynb
+++ b/exercise_2.ipynb
@@ -62,13 +62,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "12kHX2dDFOPu",
-        "outputId": "1d71f628-59d1-4307-d368-7f862783c2c0"
+        "outputId": "cbc07072-40fd-411b-b1a4-bd86f2394905"
       },
       "outputs": [
         {
@@ -105,7 +105,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 8,
       "metadata": {
         "id": "PCjx6U-_FOPv"
       },
@@ -125,14 +125,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
         "id": "ZYM_qz8PFOPv",
-        "outputId": "11fd2d24-5fb7-43cc-86a8-430c73897f3f"
+        "outputId": "8c28a74b-27ad-4b57-f99d-5a853cf06696"
       },
       "outputs": [
         {
@@ -148,7 +148,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-35c3768c-2736-464d-b9da-de22dc0f95dd\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-0e96b013-d034-46d6-a35a-041d0cc4648a\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -215,7 +215,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-35c3768c-2736-464d-b9da-de22dc0f95dd')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0e96b013-d034-46d6-a35a-041d0cc4648a')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -267,12 +267,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-35c3768c-2736-464d-b9da-de22dc0f95dd button.colab-df-convert');\n",
+              "        document.querySelector('#df-0e96b013-d034-46d6-a35a-041d0cc4648a button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-35c3768c-2736-464d-b9da-de22dc0f95dd');\n",
+              "        const element = document.querySelector('#df-0e96b013-d034-46d6-a35a-041d0cc4648a');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -292,8 +292,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-5d40296d-7f37-464f-8ec7-8bb6f92a23a4\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5d40296d-7f37-464f-8ec7-8bb6f92a23a4')\"\n",
+              "<div id=\"df-2b160a34-77fd-4d57-8992-6f21ca642700\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-2b160a34-77fd-4d57-8992-6f21ca642700')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -412,7 +412,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-5d40296d-7f37-464f-8ec7-8bb6f92a23a4 button');\n",
+              "        document.querySelector('#df-2b160a34-77fd-4d57-8992-6f21ca642700 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -423,7 +423,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 9
         }
       ],
       "source": [
@@ -441,13 +441,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "zbKsrWmmFOPw",
-        "outputId": "91870bf8-e809-4528-93f3-68d2a557b9c8"
+        "outputId": "d166fef7-ba6a-44aa-e5e5-d8b85ef9660e"
       },
       "outputs": [
         {
@@ -483,14 +483,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 300
         },
         "id": "z9BvhJ_6FOPw",
-        "outputId": "fb70054a-8659-48a9-805b-2f5fb6afc161"
+        "outputId": "b0632bd7-0bd1-487b-f5a8-e26bb4e532de"
       },
       "outputs": [
         {
@@ -509,7 +509,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-aac4b100-05c2-4e67-af83-7b1b8c99ab09\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-3fd206f2-cba7-4a30-8dc9-1a2128f8cfe6\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -597,7 +597,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-aac4b100-05c2-4e67-af83-7b1b8c99ab09')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3fd206f2-cba7-4a30-8dc9-1a2128f8cfe6')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -649,12 +649,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-aac4b100-05c2-4e67-af83-7b1b8c99ab09 button.colab-df-convert');\n",
+              "        document.querySelector('#df-3fd206f2-cba7-4a30-8dc9-1a2128f8cfe6 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-aac4b100-05c2-4e67-af83-7b1b8c99ab09');\n",
+              "        const element = document.querySelector('#df-3fd206f2-cba7-4a30-8dc9-1a2128f8cfe6');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -674,8 +674,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-457865ce-cb98-48e0-9acd-19e2bb583c84\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-457865ce-cb98-48e0-9acd-19e2bb583c84')\"\n",
+              "<div id=\"df-31e2a129-4338-4cde-9330-8d528baa944f\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-31e2a129-4338-4cde-9330-8d528baa944f')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -794,7 +794,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-457865ce-cb98-48e0-9acd-19e2bb583c84 button');\n",
+              "        document.querySelector('#df-31e2a129-4338-4cde-9330-8d528baa944f button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -805,7 +805,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 11
         }
       ],
       "source": [
@@ -823,13 +823,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "xc6ZZv4-FOPw",
-        "outputId": "2c05a0fe-0d10-47a8-9784-d3fa4d42d7b4"
+        "outputId": "44f07998-fec4-4751-bb48-3c5ac52a59ac"
       },
       "outputs": [
         {
@@ -846,7 +846,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 12
         }
       ],
       "source": [
@@ -867,7 +867,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 13,
       "metadata": {
         "id": "vlzW3mVdFOPx"
       },
@@ -883,14 +883,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 449
         },
         "id": "4mXRbBHcFOPx",
-        "outputId": "00df7bf7-ceca-4c36-e177-6781c131e789"
+        "outputId": "e8f33531-9f02-464e-87bf-c11003733b61"
       },
       "outputs": [
         {
@@ -922,13 +922,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 115,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GmtfvIbCFOPx",
-        "outputId": "b9161a80-7dcb-4c14-fead-36a0a4af4eb4"
+        "outputId": "1dc721a0-ce83-419f-def6-a73959de0546"
       },
       "outputs": [
         {
@@ -970,6 +970,8 @@
       },
       "outputs": [],
       "source": [
+        "knn = KNeighborsClassifier(n_neighbors=5)\n",
+        "\n",
         "knn.fit(X_train, y_train)"
       ]
     },
@@ -984,7 +986,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 20,
       "metadata": {
         "id": "2NQY-3uXFOPy"
       },
@@ -1004,14 +1006,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 119,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 472
         },
         "id": "GnWZReR2FOPy",
-        "outputId": "494bd45c-2ab8-4c8a-979d-e8169e92d06b"
+        "outputId": "c6f3b907-b0df-4080-d23c-26218befd158"
       },
       "outputs": [
         {
@@ -1054,13 +1056,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "wH0MT-BMFOPy",
-        "outputId": "ab17114a-88a7-472a-8d44-292375674c7d"
+        "outputId": "1e6cbf77-4c6d-40c3-ae13-df9026b9c813"
       },
       "outputs": [
         {
@@ -1071,10 +1073,13 @@
             ]
           },
           "metadata": {},
-          "execution_count": 79
+          "execution_count": 21
         }
       ],
       "source": [
+        "knn = KNeighborsClassifier(n_neighbors=5)\n",
+        "knn.fit(X, y)\n",
+        "\n",
         "knn.predict([[1,167,50]])"
       ]
     }
